KM-1372 content & logo

--- a/public/creative-portfolio.html
+++ b/public/creative-portfolio.html
@@ -11,7 +11,7 @@
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>zumar</title>
+    <title>MetanoiaHR</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/fav2.png" title="Favicon" sizes="16x16" />
@@ -191,17 +191,20 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <h2> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> <span> UX Design </span> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> </h2>
+                            <h2> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> <span> UX Design
+                                </span> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> </h2>
                             <span class="mirror_1"> UX Design </span>
                             <span class="mirror_2"> UX Design </span>
                         </div>
                         <div class="swiper-slide">
-                            <h2> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> <span> Game Development </span> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> </h2>
+                            <h2> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> <span> Game Development
+                                </span> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> </h2>
                             <span class="mirror_1"> Game Development </span>
                             <span class="mirror_2"> Game Development </span>
                         </div>
                         <div class="swiper-slide">
-                            <h2> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> <span> Website Design </span> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> </h2>
+                            <h2> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> <span> Website Design
+                                </span> <img src="assets/img/logo_mark_or1.png" alt="" class="icon-40"> </h2>
                             <span class="mirror_1"> Website Design </span>
                             <span class="mirror_2"> Website Design </span>
                         </div>
@@ -230,7 +233,8 @@
                                 <span class="su_button_circle bg-light2"></span>
                                 <a href="#" class="butn py-2 button_su_inner bg-white m-0 pb-10 radius-4">
                                     <span class="button_text_container fsz-13 fw-bold text-capitalize"> <img
-                                            src="assets/img/logo_mark_dk.png" alt="" class="icon-20 me-2"> Get Started Now
+                                            src="assets/img/logo_mark_dk.png" alt="" class="icon-20 me-2"> Get Started
+                                        Now
                                     </span>
                                 </a>
                             </div>
@@ -254,7 +258,8 @@
                             <img src="assets/img/logo_dark.png" alt="">
                         </div>
                         <div class="text color-666">
-                            Design Incorporated is a full service creative & digital agency based in Surrey, UK. To discuss your marketingor communications goals, please contact us now.
+                            Design Incorporated is a full service creative & digital agency based in Surrey, UK. To
+                            discuss your marketingor communications goals, please contact us now.
                         </div>
                         <div class="foot-links mt-50">
                             <a href="#"> <i class="fab fa-facebook-f"></i> </a>
@@ -325,7 +330,8 @@
             <div class="foot">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p class="color-666"> Copyright & Design By 2023 <a href="#" class="fw-bold color-000"> zumar </a> . All rights reserved. </p>
+                        <p class="color-666"> Copyright & Design By 2023 <a href="#" class="fw-bold color-000">
+                                MetanoiaHR </a> . All rights reserved. </p>
                     </div>
                     <div class="col-lg-6 text-lg-end mt-4 mt-lg-0">
                         <div class="foot-links text-capitalize fw-bold">
@@ -365,7 +371,7 @@
     <script src="assets/js/lib/demo.js"></script>
     <script src="assets/js/main.js"></script>
 
-    
+
 
 </body>
 
