--- a/public/inner_pages/page-pricing.html
+++ b/public/inner_pages/page-pricing.html
@@ -11,7 +11,7 @@
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>zumar</title>
+    <title>MetanoiaHR</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../common/assets/img/fav2.png" title="Favicon" sizes="17x17" />
@@ -112,7 +112,8 @@
             <div class="title text-capitalize text-center text-white">
                 <h1 class="fsz-60"> Our Price & Plans </h1>
             </div>
-            <p class="fsz-18 mt-30 text-white op-6"> Ensuring the best return on investment for your bespoke <br> SEO campaign requirement. </p>
+            <p class="fsz-18 mt-30 text-white op-6"> Ensuring the best return on investment for your bespoke <br> SEO
+                campaign requirement. </p>
         </div>
         <img src="assets/img/head_line.png" alt="" class="head_line">
         <span class="circle"></span>
@@ -134,8 +135,11 @@
                 <div class="toggle_switch d-flex align-items-center justify-content-center">
                     <div class="form-check form-switch p-0 fw-bold">
                         <label class="form-check-label" for="flexSwitchCheckDefault"><small> Monthly </small></label>
-                        <input class="form-check-input float-none mx-2" type="checkbox" id="flexSwitchCheckDefault" checked>
-                        <label class="form-check-label" for="flexSwitchCheckDefault"><small> Annual <a href="#" class="color-orange1 text-decoration-underline ms-2"> 20% Discount </a> </small></label>
+                        <input class="form-check-input float-none mx-2" type="checkbox" id="flexSwitchCheckDefault"
+                            checked>
+                        <label class="form-check-label" for="flexSwitchCheckDefault"><small> Annual <a href="#"
+                                    class="color-orange1 text-decoration-underline ms-2"> 20% Discount </a>
+                            </small></label>
                     </div>
                 </div>
                 <div class="content">
@@ -144,22 +148,31 @@
                             <div class="pricing-card">
                                 <h6> Standard </h6>
                                 <h2> €299 </h2>
-                                <p class="op-5 color-000"> Easy to automate the frequently asked questions with a chatbot. </p>
+                                <p class="op-5 color-000"> Easy to automate the frequently asked questions with a
+                                    chatbot. </p>
                                 <div class="button_su radius-3 mt-30 w-100 border">
                                     <span class="su_button_circle bg-fff desplode-circle"></span>
-                                    <a href="#" class="butn py-2 button_su_inner m-0 rounded-0 bg-light2 lh-5 w-100 text-center">
-                                        <span class="button_text_container fsz-13 text-capitalize color-blue4 ltspc-1"> Sign up for trail </span>
+                                    <a href="#"
+                                        class="butn py-2 button_su_inner m-0 rounded-0 bg-light2 lh-5 w-100 text-center">
+                                        <span class="button_text_container fsz-13 text-capitalize color-blue4 ltspc-1">
+                                            Sign up for trail </span>
                                     </a>
                                 </div>
                                 <ul class="fsz-16">
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €0,007 per conversation p/m </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> 10 users included </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €49 per extra chatbot p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €0,007 per conversation p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> 10 users included </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €49 per extra chatbot p/m </span> </li>
                                 </ul>
                                 <ul class="fsz-16 pb-0 border-0 op-5">
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €0,007 per conversation p/m </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> 10 users included </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €49 per extra chatbot p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €0,007 per conversation p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> 10 users included </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €49 per extra chatbot p/m </span> </li>
                                 </ul>
                             </div>
                         </div>
@@ -167,22 +180,31 @@
                             <div class="pricing-card active">
                                 <h6> advanced </h6>
                                 <h2> €399 </h2>
-                                <p class="op-5 color-000"> Easy to automate the frequently asked questions with a chatbot. </p>
+                                <p class="op-5 color-000"> Easy to automate the frequently asked questions with a
+                                    chatbot. </p>
                                 <div class="button_su radius-3 mt-30 w-100 border">
                                     <span class="su_button_circle bg-000 desplode-circle"></span>
-                                    <a href="#" class="butn py-2 button_su_inner m-0 rounded-0 bg-blue4 lh-5 w-100 text-center">
-                                        <span class="button_text_container fsz-13 text-capitalize text-white ltspc-1"> Sign up for trail </span>
+                                    <a href="#"
+                                        class="butn py-2 button_su_inner m-0 rounded-0 bg-blue4 lh-5 w-100 text-center">
+                                        <span class="button_text_container fsz-13 text-capitalize text-white ltspc-1">
+                                            Sign up for trail </span>
                                     </a>
                                 </div>
                                 <ul class="fsz-16">
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €0,007 per conversation p/m </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> 10 users included </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €49 per extra chatbot p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €0,007 per conversation p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> 10 users included </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €49 per extra chatbot p/m </span> </li>
                                 </ul>
                                 <ul class="fsz-16 pb-0 border-0 op-5">
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €0,007 per conversation p/m </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> 10 users included </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €49 per extra chatbot p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €0,007 per conversation p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> 10 users included </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €49 per extra chatbot p/m </span> </li>
                                 </ul>
                             </div>
                         </div>
@@ -190,22 +212,31 @@
                             <div class="pricing-card">
                                 <h6> team </h6>
                                 <h2> €999 </h2>
-                                <p class="op-5 color-000"> Easy to automate the frequently asked questions with a chatbot. </p>
+                                <p class="op-5 color-000"> Easy to automate the frequently asked questions with a
+                                    chatbot. </p>
                                 <div class="button_su radius-3 mt-30 w-100 border">
                                     <span class="su_button_circle bg-fff desplode-circle"></span>
-                                    <a href="#" class="butn py-2 button_su_inner m-0 rounded-0 bg-light2 lh-5 w-100 text-center">
-                                        <span class="button_text_container fsz-13 text-capitalize color-blue4 ltspc-1"> Sign up for trail </span>
+                                    <a href="#"
+                                        class="butn py-2 button_su_inner m-0 rounded-0 bg-light2 lh-5 w-100 text-center">
+                                        <span class="button_text_container fsz-13 text-capitalize color-blue4 ltspc-1">
+                                            Sign up for trail </span>
                                     </a>
                                 </div>
                                 <ul class="fsz-16">
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €0,007 per conversation p/m </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> 10 users included </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €49 per extra chatbot p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €0,007 per conversation p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> 10 users included </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €49 per extra chatbot p/m </span> </li>
                                 </ul>
                                 <ul class="fsz-16 pb-0 border-0 op-5">
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €0,007 per conversation p/m </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> 10 users included </span> </li>
-                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt=""> </span> <span> €49 per extra chatbot p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €0,007 per conversation p/m </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> 10 users included </span> </li>
+                                    <li> <span class="icon-10 me-20"> <img src="assets/img/logo_mark_bl3.png" alt="">
+                                        </span> <span> €49 per extra chatbot p/m </span> </li>
                                 </ul>
                             </div>
                         </div>
@@ -232,7 +263,9 @@
                             <div class="button_su shadow-lg radius-3">
                                 <span class="su_button_circle bg-light1 desplode-circle"></span>
                                 <a href="#" class="butn py-2 px-4 button_su_inner bg-fff radius-3">
-                                    <span class="button_text_container fsz-13 fw-bold text-capitalize color-000"> <img src="assets/img/logo_mark_bl3.png" alt="" class="icon-10 me-2"> Make A Request </span>
+                                    <span class="button_text_container fsz-13 fw-bold text-capitalize color-000"> <img
+                                            src="assets/img/logo_mark_bl3.png" alt="" class="icon-10 me-2"> Make A
+                                        Request </span>
                                 </a>
                             </div>
                         </div>
@@ -256,7 +289,8 @@
                             <img src="assets/img/logo_black.png" alt="">
                         </div>
                         <div class="text color-666">
-                            Design Incorporated is a full service creative & digital agency based in Surrey, UK. To discuss your marketingor communications goals, please contact us now.
+                            Design Incorporated is a full service creative & digital agency based in Surrey, UK. To
+                            discuss your marketingor communications goals, please contact us now.
                         </div>
                         <div class="foot-links mt-50">
                             <a href="#"> <i class="fab fa-facebook-f"></i> </a>
@@ -327,7 +361,8 @@
             <div class="foot">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p class="color-666"> Copyright & Design By 2023 <a href="#" class="fw-bold color-000"> zumar </a> . All rights reserved. </p>
+                        <p class="color-666"> Copyright & Design By 2023 <a href="#" class="fw-bold color-000">
+                                MetanoiaHR </a> . All rights reserved. </p>
                     </div>
                     <div class="col-lg-6 text-lg-end mt-4 mt-lg-0">
                         <div class="foot-links text-capitalize fw-bold">
@@ -340,7 +375,7 @@
             </div>
         </div>
     </footer>
-    <!--  end footer  --> 
+    <!--  end footer  -->
 
     <!--  request  -->
     <script src="../common/assets/js/lib/jquery-3.0.0.min.js"></script>
@@ -357,7 +392,7 @@
     <!-- ----- home scripts ----- -->
     <script src="assets/js/inner_pages_scripts.js"></script>
 
-    
+
 
 
 </body>
