KM-1372 head image changed

--- a/public/inner_pages/page-about.html
+++ b/public/inner_pages/page-about.html
@@ -14,7 +14,7 @@
     <title>MetanoiaHR</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../common/assets/img/fav2.png" title="Favicon" sizes="17x17" />
+    <link rel="shortcut icon" href="../assets/img/hr.png" title="Favicon" sizes="16x16" />
 
     <!-- bootstrap 5 -->
     <link rel="stylesheet" href="../common/assets/css/lib/bootstrap.min.css">
