--- a/public/personal-portfolio.html
+++ b/public/personal-portfolio.html
@@ -14,7 +14,7 @@
     <title>MetanoiaHR</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/fav2.png" title="Favicon" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/img/hr.png" title="Favicon" sizes="16x16" />
 
     <!-- bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
@@ -293,7 +293,8 @@
                                 <img src="assets/img/home_12/projects/1.webp" alt="">
                             </div>
                             <h2> <i class="fal fa-long-arrow-right arrow-icon"></i> <span> Flutter Nova App </span>
-                                <small> 2016 </small> </h2>
+                                <small> 2016 </small>
+                            </h2>
                             <p class="fsz-14 color-777"> Design & Development </p>
                         </div>
                     </div>
@@ -306,7 +307,8 @@
                                 <img src="assets/img/home_12/projects/2.webp" alt="">
                             </div>
                             <h2> <i class="fal fa-long-arrow-right arrow-icon"></i> <span> Makdong Web Design </span>
-                                <small> 2018 </small> </h2>
+                                <small> 2018 </small>
+                            </h2>
                             <p class="fsz-14 color-777"> Wordpress </p>
                         </div>
                     </div>
@@ -319,7 +321,8 @@
                                 <img src="assets/img/home_12/projects/3.webp" alt="">
                             </div>
                             <h2> <i class="fal fa-long-arrow-right arrow-icon"></i> <span> Poken Amily Game </span>
-                                <small> 2020 </small> </h2>
+                                <small> 2020 </small>
+                            </h2>
                             <p class="fsz-14 color-777"> Game Design </p>
                         </div>
                     </div>
@@ -332,7 +335,8 @@
                                 <img src="assets/img/home_12/projects/4.webp" alt="">
                             </div>
                             <h2> <i class="fal fa-long-arrow-right arrow-icon"></i> <span> Champions Club Kit </span>
-                                <small> 2023 </small> </h2>
+                                <small> 2023 </small>
+                            </h2>
                             <p class="fsz-14 color-777"> Ui & UX </p>
                         </div>
                     </div>
