--- a/public/creative-portfolio.html
+++ b/public/creative-portfolio.html
@@ -14,7 +14,7 @@
     <title>MetanoiaHR</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/fav2.png" title="Favicon" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/img/hr.png" title="Favicon" sizes="16x16" />
 
     <!-- bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
