--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="" />
     <meta name="author" content="" />
 
     <!-- Title  -->
     <title>MetanoiaHR</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/fav2.png" title="Favicon" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/img/hr.png" title="Favicon" sizes="16x16" />
 
     <!-- bootstrap 5 -->
     <link rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
@@ -77,7 +77,7 @@
                     </h4>
                     <ul>
                         <li> <a href="#" class="fsz-20 text-decoration-underline fw-400 d-block mb-20"> <i
-                                    class="fal fa-envelope-open me-3 color-blue1"></i> info@MetanoiaHR.agency.com </a>
+                                    class="fal fa-envelope-open me-3 color-blue1"></i> abdullah@metanoiahr.com </a>
                         </li>
                         <li> <a href="#" class="fsz-20 text-decoration-underline fw-400 d-block mb-20"> <i
                                     class="fal fa-phone me-3 color-blue1"></i> +999 000 666 77 </a> </li>
