KM-1372 footer edited

--- a/public/inner_pages/page-about.html
+++ b/public/inner_pages/page-about.html
@@ -93,7 +93,8 @@
                         </div>
                         <div class="button_su radius-4">
                             <span class="su_button_circle bg-000"></span>
-                            <a href="../page-contact-3.html" class="butn pt-15 pb-15 button_su_inner bg-blue3 m-0 radius-4 lh-1">
+                            <a href="../page-contact-3.html"
+                                class="butn pt-15 pb-15 button_su_inner bg-blue3 m-0 radius-4 lh-1">
                                 <span class="button_text_container fsz-13 fw-bold text-capitalize text-white"> <img
                                         src="../assets/img/hr.png" alt="" class="icon-20 me-2"> Get Started Now
                                 </span>
@@ -469,8 +470,9 @@
                                 </div>
                                 <div class="info">
                                     <div class="date mb-10"> <a href="#" class="text-uppercase color-blue3"> design </a>
-                                        <img src="../assets/img/hr.png" alt="" class="icon-10 mx-2"> <a
-                                            href="#"> March 20, 2023 </a> </div>
+                                        <img src="../assets/img/hr.png" alt="" class="icon-10 mx-2"> <a href="#"> March
+                                            20, 2023 </a>
+                                    </div>
                                     <h6> <a href="#" class="fsz-20 hover-red2 mb-30 fw-bold lh-4"> Talk magazine is the
                                             best global business magazine... </a> </h6>
                                     <div class="row align-items-center">
@@ -507,8 +509,9 @@
                                 </div>
                                 <div class="info">
                                     <div class="date mb-10"> <a href="#" class="text-uppercase color-blue3"> agency </a>
-                                        <img src="../assets/img/hr.png" alt="" class="icon-10 mx-2"> <a
-                                            href="#"> March 20, 2023 </a> </div>
+                                        <img src="../assets/img/hr.png" alt="" class="icon-10 mx-2"> <a href="#"> March
+                                            20, 2023 </a>
+                                    </div>
                                     <h6> <a href="#" class="fsz-20 hover-red2 mb-30 fw-bold lh-4"> Content is the info
                                             contained with in communication media... </a> </h6>
                                     <div class="row align-items-center">
@@ -545,8 +548,8 @@
                                 </div>
                                 <div class="info">
                                     <div class="date mb-10"> <a href="#" class="text-uppercase color-blue3"> business
-                                        </a> <img src="../assets/img/hr.png" alt="" class="icon-10 mx-2"> <a
-                                            href="#"> March 20, 2023 </a> </div>
+                                        </a> <img src="../assets/img/hr.png" alt="" class="icon-10 mx-2"> <a href="#">
+                                            March 20, 2023 </a> </div>
                                     <h6> <a href="#" class="fsz-20 hover-red2 mb-30 fw-bold lh-4"> It’s directed at an
                                             end-user or audience in the sectors... </a> </h6>
                                     <div class="row align-items-center">
@@ -669,12 +672,18 @@
                     <div class="links">
                         <h5 class="sub-title mt-5 mt-lg-0"> Services </h5>
                         <ul>
-                            <li> <a href="#"> Graphic Design </a> </li>
-                            <li> <a href="#"> Web Development </a> </li>
-                            <li> <a href="#"> Game Design </a> </li>
-                            <li> <a href="#"> UI & UX Design </a> </li>
-                            <li> <a href="#"> Search Engine Optimization </a> </li>
-                            <li> <a href="#"> 24/7 Online Support </a> </li>
+                            <li>
+                                <a href="#">Strategy Recrulting</a>
+                            </li>
+                            <li>
+                                <a href="#">Empowerment Coaching</a>
+                            </li>
+                            <li>
+                                <a href="#"> Job Seeker Support</a>
+                            </li>
+                            <!-- <li>
+                                            <a href="#">Human Resource and Manage</a>
+                                        </li> -->
                         </ul>
                     </div>
                 </div>
