--- a/public/inner_pages/page-services-details.html
+++ b/public/inner_pages/page-services-details.html
@@ -167,7 +167,8 @@
                                             </div>
                                             <ul class="fsz-16">
                                                 <li class="mb-20"> <i class="far fa-check me-3 color-blue3"></i>
-                                                    <strong> The benefits of surgical procedures </strong> </li>
+                                                    <strong> The benefits of surgical procedures </strong>
+                                                </li>
                                                 <li> <i class="far fa-check me-3 color-blue3"></i> <strong>
                                                         Comprehensive eye exams </strong> </li>
                                             </ul>
@@ -443,12 +444,18 @@
                     <div class="links">
                         <h5 class="sub-title mt-5 mt-lg-0"> Services </h5>
                         <ul>
-                            <li> <a href="#"> Graphic Design </a> </li>
-                            <li> <a href="#"> Web Development </a> </li>
-                            <li> <a href="#"> Game Design </a> </li>
-                            <li> <a href="#"> UI & UX Design </a> </li>
-                            <li> <a href="#"> Search Engine Optimization </a> </li>
-                            <li> <a href="#"> 24/7 Online Support </a> </li>
+                            <li>
+                                <a href="#">Strategy Recrulting</a>
+                            </li>
+                            <li>
+                                <a href="#">Empowerment Coaching</a>
+                            </li>
+                            <li>
+                                <a href="#"> Job Seeker Support</a>
+                            </li>
+                            <!-- <li>
+                                            <a href="#">Human Resource and Manage</a>
+                                        </li> -->
                         </ul>
                     </div>
                 </div>
