--- a/public/page-blog-3.html
+++ b/public/page-blog-3.html
@@ -673,17 +673,17 @@
                                     <h5 class="sub-title">services</h5>
                                     <ul class="links">
                                         <li>
-                                            <a href="#">Busines Strategy and Planning</a>
+                                            <a href="#">Strategy Recrulting</a>
                                         </li>
                                         <li>
-                                            <a href="#">Financial and Insurance</a>
+                                            <a href="#">Empowerment Coaching</a>
                                         </li>
                                         <li>
-                                            <a href="#">E-Commerce and Market</a>
+                                            <a href="#"> Job Seeker Support</a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="#">Human Resource and Manage</a>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
