--- a/public/page-contact-3.html
+++ b/public/page-contact-3.html
@@ -213,7 +213,8 @@
                                             class="color-fff text-decoration-underline"> Terms & Conditons </a> </p>
                                     <div class="button_su mt-90">
                                         <span class="su_button_circle bg-000 desplode-circle"></span>
-                                        <a href="mailto:abdullah@metanoiahr.com" class="butn text-uppercase button_su_inner bg-cyan1">
+                                        <a href="mailto:abdullah@metanoiahr.com"
+                                            class="butn text-uppercase button_su_inner bg-cyan1">
                                             <span class="button_text_container fsz-16 text-white"> send message <i
                                                     class="ti-arrow-top-right ms-1"></i></span>
                                         </a>
@@ -280,7 +281,7 @@
                                     <img src="assets/img/hr.png" alt="">
                                 </div>
                                 <h2 class="fw-200  ms-3 color-000">
-                                    <span class="fw-bold"> MetanoiaHR</span> 
+                                    <span class="fw-bold"> MetanoiaHR</span>
                                     <!-- Bolder <br> and Better -->
                                 </h2>
                             </div>
@@ -345,17 +346,17 @@
                                     <h5 class="sub-title">services</h5>
                                     <ul class="links">
                                         <li>
-                                            <a href="#">Busines Strategy and Planning</a>
+                                            <a href="#">Strategy Recrulting</a>
                                         </li>
                                         <li>
-                                            <a href="#">Financial and Insurance</a>
+                                            <a href="#">Empowerment Coaching</a>
                                         </li>
                                         <li>
-                                            <a href="#">E-Commerce and Market</a>
+                                            <a href="#"> Job Seeker Support</a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="#">Human Resource and Manage</a>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
