--- a/public/inner_pages/page-services.html
+++ b/public/inner_pages/page-services.html
@@ -288,8 +288,8 @@
                     <div class="col-lg-5">
                         <div class="info">
                             <div class="title mb-50">
-                                <h6 class="fsz-14 color-blue3 text-uppercase mb-15"> <img
-                                        src="../assets/img/hr.png" alt="" class="icon-10 me-3"> skillset </h6>
+                                <h6 class="fsz-14 color-blue3 text-uppercase mb-15"> <img src="../assets/img/hr.png"
+                                        alt="" class="icon-10 me-3"> skillset </h6>
                                 <h2 class="fsz-50"> We Have An <br> Power For <span class="color-red2"> Forwards </span>
                                 </h2>
                             </div>
@@ -427,7 +427,8 @@
                         <div class="col-lg-5 text-lg-end mt-4 mt-lg-0">
                             <div class="button_su radius-4 shadow-lg">
                                 <span class="su_button_circle bg-000 desplode-circle"></span>
-                                <a href="mailto:abdullah@metanoiahr.com" class="butn pt-15 pb-15 button_su_inner bg-red6 m-0 radius-4 lh-1 border-0">
+                                <a href="mailto:abdullah@metanoiahr.com"
+                                    class="butn pt-15 pb-15 button_su_inner bg-red6 m-0 radius-4 lh-1 border-0">
                                     <span class="button_text_container fsz-13 fw-bold text-capitalize text-white"> <img
                                             src="../assets/img/hr.png" alt="" class="icon-15 me-2"> Submit
                                     </span>
@@ -497,12 +498,18 @@
                     <div class="links">
                         <h5 class="sub-title mt-5 mt-lg-0"> Services </h5>
                         <ul>
-                            <li> <a href="#"> Graphic Design </a> </li>
-                            <li> <a href="#"> Web Development </a> </li>
-                            <li> <a href="#"> Game Design </a> </li>
-                            <li> <a href="#"> UI & UX Design </a> </li>
-                            <li> <a href="#"> Search Engine Optimization </a> </li>
-                            <li> <a href="#"> 24/7 Online Support </a> </li>
+                            <li>
+                                <a href="#">Strategy Recrulting</a>
+                            </li>
+                            <li>
+                                <a href="#">Empowerment Coaching</a>
+                            </li>
+                            <li>
+                                <a href="#"> Job Seeker Support</a>
+                            </li>
+                            <!-- <li>
+                                            <a href="#">Human Resource and Manage</a>
+                                        </li> -->
                         </ul>
                     </div>
                 </div>
@@ -515,7 +522,8 @@
                         </div>
                         <div class="button_su radius-4">
                             <span class="su_button_circle bg-darkBlue2"></span>
-                            <a href="mailto:abdullah@metanoiahr.com" class="butn py-2 button_su_inner bg-blue3 m-0 pb-10 radius-4">
+                            <a href="mailto:abdullah@metanoiahr.com"
+                                class="butn py-2 button_su_inner bg-blue3 m-0 pb-10 radius-4">
                                 <span class="button_text_container fsz-13 fw-bold text-capitalize text-white"> <img
                                         src="../assets/img/hr.png" alt="" class="icon-15 me-2"> Subscribe
                                 </span>
